Source/WebCore/platform/mediastream/libwebrtc/GStreamerVideoDecoderFactory.cpp
@@ -44,6 +44,11 @@ GST_DEBUG_CATEGORY(webkit_webrtcdec_debug);
 
 namespace WebCore {
 
+typedef struct {
+    uint64_t timestamp;
+    int64_t renderTimeMs;
+} InputTimestamps;
+
 class GStreamerVideoDecoder : public webrtc::VideoDecoder {
 public:
     GStreamerVideoDecoder()
@@ -167,7 +172,8 @@ public:
         GST_BUFFER_PTS(buffer.get()) = (static_cast<guint64>(renderTimeMs) * GST_MSECOND) - m_firstBufferPts;
         {
             auto locker = holdLock(m_bufferMapLock);
-            m_dtsPtsMap[GST_BUFFER_PTS(buffer.get())] = inputImage.Timestamp();
+            InputTimestamps timestamps = {inputImage.Timestamp(), renderTimeMs};
+            m_dtsPtsMap[GST_BUFFER_PTS(buffer.get())] = timestamps;
         }
 
         GST_LOG_OBJECT(pipeline(), "%ld Decoding: %" GST_PTR_FORMAT, renderTimeMs, buffer.get());
@@ -228,14 +234,16 @@ public:
         auto sample = gst_app_sink_pull_sample(GST_APP_SINK(sink));
         auto buffer = gst_sample_get_buffer(sample);
 
-        {
-            auto locker = holdLock(m_bufferMapLock);
-            // Make sure that the frame.timestamp == previsouly input_frame._timeStamp
-            // as it is required by the VideoDecoder baseclass.
-            GST_BUFFER_DTS(buffer) = m_dtsPtsMap[GST_BUFFER_PTS(buffer)];
-            m_dtsPtsMap.erase(GST_BUFFER_PTS(buffer));
-        }
-        auto frame(LibWebRTCVideoFrameFromGStreamerSample(sample, webrtc::kVideoRotation_0));
+        m_bufferMapLock.lock();
+        // Make sure that the frame.timestamp == previsouly input_frame._timeStamp
+        // as it is required by the VideoDecoder baseclass.
+        auto timestamps = m_dtsPtsMap[GST_BUFFER_PTS(buffer)];
+        m_dtsPtsMap.erase(GST_BUFFER_PTS(buffer));
+        m_bufferMapLock.unlock();
+
+        auto frame(LibWebRTCVideoFrameFromGStreamerSample(sample, webrtc::kVideoRotation_0,
+            timestamps.timestamp, timestamps.renderTimeMs));
+
         GST_BUFFER_DTS(buffer) = GST_CLOCK_TIME_NONE;
         GST_LOG_OBJECT(pipeline(), "Output decoded frame! %d -> %" GST_PTR_FORMAT,
             frame->timestamp(), buffer);
@@ -267,7 +275,7 @@ private:
     webrtc::DecodedImageCallback* m_imageReadyCb;
 
     Lock m_bufferMapLock;
-    StdMap<GstClockTime, GstClockTime> m_dtsPtsMap;
+    StdMap<GstClockTime, InputTimestamps> m_dtsPtsMap;
     GstClockTime m_firstBufferPts;
     GstClockTime m_firstBufferDts;
 };
